# audio-fingerprinting-fyp

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
Diagrams/: Database Diagram DrawIO.drawio  Fingerprint:Watermark algo.drawio  README.md  Sys arch.drawio  Ultrasound generation algo.drawio  Use Case Diagram.drawio
Frontend/: .editorconfig  .env_sample  .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
Frontend/public/: index.html
Frontend/src/: App.vue
Frontend/src/components/: Ping.vue
Frontend/src/router/: index.js
Frontend/src/store/: index.js
Frontend/src/utilities/: api.js
Frontend/src/views/: About.vue  Account.vue  Detect.vue  Home.vue  Login.vue  Register.vue  Upload.vue
backend/: .flaskenv  .flaskenv_sample  Dockerfile  README.md  backend.py  gunicorn.conf.py  requirements.txt
backend/app/: __init__.py  routes.py
backend/app/controllers/: __init__.py  audio_analysis.py  audio_hashing.py  audio_matching.py  audio_overlay.py  create_audio.py  create_ultrasound.py  user.py  users.py
backend/app/routes/: __init__.py  task.py  user.py
backend/app/schemas/: __init__.py  task.py  user.py
snippets/: concat_audio.py
