[tool.poetry]
name = "audio-fingerprinting-fyp"
version = "0.1.0"
description = ""
authors = ["Gerald Lau"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
ffmpeg-python = "^0.2.0"
Flask = "^2.1.1"
numpy = "^1.22.3"
bson = "^0.5.10"
pydub = "^0.25.1"
Flask-JWT-Extended = "^4.3.1"
Flask-Uploads = "^0.2.1"
ValidX = "^0.7"
scipy = "^1.8.0"
pymongo = "^4.1.0"
gunicorn = "^20.1.0"
wrapt = "^1.14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
